--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,7 +87,8 @@ const last_posts = posts.slice(0, 3);
   <HorizontalCard
     title="Softbody Physics Simulator"
     video="/softbody_demo_video.mp4"
-    desc="This project models softbody interactions using particle-spring systems. This was the 1st place project for Cornell's Graphics course (CS4620)."
+    desc="This project models softbody interactions using particle-spring systems. \
+    This was the top submission for a creative project in Cornell's Graphics course (CS4620)."
     url={""}
     target="_self"
     badge=""
